# genchemlab

./: HISTORY.txt  HISTORY.txt~  Makefile.am  Makefile.in  README.txt  README.txt~  configure  configure.ac  configure.ac.orig  configure~  genchemlab.pro  ltmain.sh
.deps/: application.Po  application.moc.Po  main.Po  titration.Po  titration.moc.Po
autom4te-2.53.cache/: output.0  output.1  requests  traces.0  traces.1
autom4te.cache/: output.0  requests  traces.0
doc/: COPYRIGHT.txt  GPL.txt  HISTORY.txt  Makefile.am  Makefile.am~  Makefile.in  back.xpm  bpfp.html  calorimetry.html  electro.html  electro.html~  extract.html  extract.html~  index.html  index.html~  spec.html  start.html  titration.html  titration.html~
po/: genchemlab-da.po  genchemlab-da.po~  genchemlab-pl.po  genchemlab-pl.qm  genchemlab.da.qm  genchemlab.pot
program/: Makefile.am  Makefile.am~  Makefile.in  application.cpp  application.cpp~  application.h  application.h~  application.pro  application.qrc  bpfp.cpp  bpfp.cpp~  bpfp.h  buretdialog.cpp  buretdialog.h  calorimetry.cpp  calorimetry.cpp~  calorimetry.h  chem_dialog.cpp  chem_dialog.cpp~  chem_dialog.h  chemicals.h  chemicals.h~  electro.cpp  electro.cpp~  electro.h  electro.h~  electrodialog.cpp  electrodialog.cpp~  electrodialog.h  electrodialog.h~  extract.cpp  extract.cpp~  extract.h  extract.h~  forward.xpm  genchemlab.desktop  genchemlab.pro  helpwindow.cpp  helpwindow.h  home.xpm  (+39 more)
